Attempting to solver responsiveness of landing page on mobile

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,6 +3,17 @@
 {% block content %}
 
 <div id="overlay-first-section"></div>
+<div class="container-fluid">
+    <section class="row">
+        <div id="first-section" class="col description panel first-section">
+            <div id="first-section-content">
+                <h1>Guillermo Brachetta</h1>
+                <h4 id="subtitle">Musician</h4>
+            </div>
+        </div>
+    </section>
+</div>
+{% comment %}
 <section>
     <div id="first-section" class="description panel first-section">
         <div id="first-section-content">
@@ -10,43 +21,49 @@
             <h4 id="subtitle">Musician</h4>
         </div>
     </div>
-    </div>
 </section>
+{% endcomment %}
 
 <div id="overlay-second-section"></div>
-<section>
-    <div id="second-section" class="panel second-section align-top">
-        <p id="second-section-content">
-            I wish I could carve my own <span class="accent">chess</span> figures.
-            <br>
-            I wish I could write the <span class="accent">novel</span> of the century.
-            <br>
-            I wish I could build my own <span class="accent">house</span>.
-            <br>
-            I wish I could paint the Amsterdam <span class="accent">sunset</span> in all its spring colours.
-            <br>
-            I can make <span class="accent"><strong>music</strong></span>, which is the miracle of having all that together.
-        </p>
-    </div>
-</section>
+<div class="container-fluid">
+    <section class="row">
+        <div id="second-section" class="panel second-section align-top">
+            <p id="second-section-content">
+                I wish I could carve my own <span class="accent">chess</span> figures.
+                <br>
+                I wish I could write the <span class="accent">novel</span> of the century.
+                <br>
+                I wish I could build my own <span class="accent">house</span>.
+                <br>
+                I wish I could paint the Amsterdam <span class="accent">sunset</span> in all its spring colours.
+                <br>
+                I can make <span class="accent"><strong>music</strong></span>, which is the miracle of having all that together.
+            </p>
+        </div>
+    </section>
+</div>
 
 <div id="overlay-third-section"></div>
-<section>
-    <div id="third-section" class="panel third-section align-top">
-        <p id="third-section-content">
-            I love being a musician.<br> I could have my dream day playing basso continuo and chamber music with friends and colleagues, to feel privileged whilst playing with them.<br> I have a strong connection with the music of Wilhelm Friedemann Bach and will not rest until I’ve done everything possible to make it better understood.<br> I cannot hold a conversation or read a book if there’s good music playing, but I can cry.<br> I find being onstage irresistible. Thanks to the music I travel and meet fascinating people.<br> I’m extremely fortunate.
-        </p>
-    </div>
-</section>
+<div class="container-fluid">
+    <section class="row">
+        <div id="third-section" class="panel third-section align-top col">
+            <p id="third-section-content">
+                I love being a musician.<br> I could have my dream day playing basso continuo and chamber music with friends and colleagues, to feel privileged whilst playing with them.<br> I have a strong connection with the music of Wilhelm Friedemann Bach and will not rest until I’ve done everything possible to make it better understood.<br> I cannot hold a conversation or read a book if there’s good music playing, but I can cry.<br> I find being onstage irresistible. Thanks to the music I travel and meet fascinating people.<br> I’m extremely fortunate.
+            </p>
+        </div>
+    </section>
+</div>
 
 <div id="overlay-fourth-section"></div>
-<section>
-    <div id="fourth-section" class="panel fourth-section align-top">
-        <p id="fourth-section-content">
-            Please visit to discover my recordings, get to know more about my music, browse images and video and find out information about my upcoming events.<br>You can find my biography <span class="accent"><a href="#" data-toggle="modal" data-target="#biography">here</a></span>.
-        </p>
-    </div>
-</section>
+<div class="container-fluid">
+    <section class="row">
+        <div id="fourth-section" class="panel fourth-section align-top col">
+            <p id="fourth-section-content">
+                Please visit to discover my recordings, get to know more about my music, browse images and video and find out information about my upcoming events.<br>You can find my biography <span class="accent"><a href="#" data-toggle="modal" data-target="#biography">here</a></span>.
+            </p>
+        </div>
+    </section>
+</div>
 
 <!-- Modal -->
 <div class="modal fade" id="biography" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
