Further Styling landing page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,10 +2,14 @@
 {% load static %}
 {% block content %}
 
-<div id="overlay-first-section"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div id="overlay-first-section" class="col"></div>
+    </div>
+</div>
 <div class="container-fluid">
     <section class="row">
-        <div id="first-section" class="col description panel first-section">
+        <div id="first-section" class="col panel first-section">
             <div id="first-section-content">
                 <h1>Guillermo Brachetta</h1>
                 <h4 id="subtitle">Musician</h4>
@@ -13,18 +17,12 @@
         </div>
     </section>
 </div>
-{% comment %}
-<section>
-    <div id="first-section" class="description panel first-section">
-        <div id="first-section-content">
-            <h1>Guillermo Brachetta</h1>
-            <h4 id="subtitle">Musician</h4>
-        </div>
-    </div>
-</section>
-{% endcomment %}
 
-<div id="overlay-second-section"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div id="overlay-second-section" class="col"></div>
+    </div>
+</div>
 <div class="container-fluid">
     <section class="row">
         <div id="second-section" class="panel second-section align-top">
@@ -43,7 +41,11 @@
     </section>
 </div>
 
-<div id="overlay-third-section"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div id="overlay-third-section" class="col"></div>
+    </div>
+</div>
 <div class="container-fluid">
     <section class="row">
         <div id="third-section" class="panel third-section align-top col">
@@ -54,7 +56,11 @@
     </section>
 </div>
 
-<div id="overlay-fourth-section"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div id="overlay-fourth-section" class="col"></div>
+    </div>
+</div>
 <div class="container-fluid">
     <section class="row">
         <div id="fourth-section" class="panel fourth-section align-top col">
