Replaced images for landing page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -25,7 +25,7 @@
 </div>
 <div class="container-fluid">
     <section class="row">
-        <div id="second-section" class="panel second-section align-top">
+        <div id="second-section" class="col panel second-section align-top">
             <p id="second-section-content">
                 I wish I could carve my own <span class="accent">chess</span> figures.
                 <br>
