--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,6 +2,43 @@
 {% load static %}
 {% block content %}
 
+
+<section>
+    <div class="bg bg-1"></div>
+    <h1>Simple parallax sections</h1>
+</section>
+<section>
+    <div class="bg bg-2"></div>
+    <h1>Hey look, a title</h1>
+</section>
+<section>
+    <div class="bg bg-3"></div>
+    <h1>They just keep coming</h1>
+</section>
+<section>
+    <div class="bg bg-4"></div>
+    <h1>So smooth though</h1>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %} 
+
 <div class="container-fluid">
     <div class="row">
         <div id="overlay-first-section" class="col"></div>
@@ -69,7 +106,7 @@
             </p>
         </div>
     </section>
-</div>
+</div> {% endcomment %}
 
 <!-- Modal -->
 <div class="modal fade" id="biography" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
