Refactored landing page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,23 +2,55 @@
 {% load static %}
 {% block content %}
 
+<div class="container-fluid">
+    <section class="row justify-content-start align-items-start">
+        <div class="overlay col first-overlay"></div>
+        <div class="bg bg-1 col"></div>
+        <div id="first-section-content" class="col-8 ml-lg-5 titles-home">
+            <h1 class="mb-0">Guillermo</h1>
+            <h1 class="mb-0">Brachetta</h1>
+            <h4 class="pt-3">Musician</h4>
+        </div>
+    </section>
 
-<section>
-    <div class="bg bg-1"></div>
-    <h1>Simple parallax sections</h1>
-</section>
-<section>
-    <div class="bg bg-2"></div>
-    <h1>Hey look, a title</h1>
-</section>
-<section>
-    <div class="bg bg-3"></div>
-    <h1>They just keep coming</h1>
-</section>
-<section>
-    <div class="bg bg-4"></div>
-    <h1>So smooth though</h1>
-</section>
+    <section class="row justify-content-center align-items-start">
+        <div class="overlay col second-overlay"></div>
+        <div class="bg bg-2 col"></div>
+        <div class="col-10 col-md-8 container-content">
+            <p id="second-section-content" class="content-home">
+                I wish I could carve my own <span class="accent">chess</span> figures.
+                <br>
+                I wish I could write the <span class="accent">novel</span> of the century.
+                <br>
+                I wish I could build my own <span class="accent">house</span>.
+                <br>
+                I wish I could paint the Amsterdam <span class="accent">sunset</span> in all its spring colours.
+                <br>
+                I can make <span class="accent"><strong>music</strong></span>, which is the miracle of having all that together.
+            </p>
+        </div>
+    </section>
+
+    <section class="row justify-content-center align-items-start">
+        <div class="overlay col third-overlay"></div>
+        <div class="bg bg-3 col"></div>
+        <div class="col-10 col-md-8 container-content">
+            <p id="third-section-content" class="content-home">
+                I love being a musician.<br> I could have my dream day playing basso continuo and chamber music with friends and colleagues, to feel privileged whilst playing with them.<br> I have a strong connection with the music of Wilhelm Friedemann Bach and will not rest until I’ve done everything possible to make it better understood.<br> I cannot hold a conversation or read a book if there’s good music playing, but I can cry.<br> I find being onstage irresistible. Thanks to the music I travel and meet fascinating people.<br> I’m extremely fortunate.
+            </p>
+        </div>
+    </section>
+
+    <section class="row justify-content-center align-items-start">
+        <div class="overlay col fourth-overlay"></div>
+        <div class="bg bg-4 col"></div>
+        <div class="col-10 col-md-8 container-content">
+            <p id="fourth-section-content" class="content-home">
+                Please visit to discover my recordings, get to know more about my music, browse images and video and find out information about my upcoming events.<br>You can find my biography <span class="accent"><a href="#" data-toggle="modal" data-target="#biography">here</a></span>.
+            </p>
+        </div>
+    </section>
+</div>
 
 
 
@@ -37,7 +69,7 @@
 
 
 
-{% comment %} 
+{% comment %}
 
 <div class="container-fluid">
     <div class="row">
