--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
     <section class="row justify-content-start align-items-start">
-        <div class="overlay col first-overlay"></div>
+        <div class="overlay-home col first-overlay"></div>
         <div class="bg bg-1 col"></div>
         <div id="first-section-content" class="col-8 ml-lg-5 titles-home">
             <h1 class="mb-0">Guillermo</h1>
@@ -14,7 +14,7 @@
     </section>
 
     <section class="row justify-content-center align-items-start">
-        <div class="overlay col second-overlay"></div>
+        <div class="overlay-home col second-overlay"></div>
         <div class="bg bg-2 col"></div>
         <div class="col-10 col-md-8 container-content">
             <p id="second-section-content" class="content-home">
@@ -32,7 +32,7 @@
     </section>
 
     <section class="row justify-content-center align-items-start">
-        <div class="overlay col third-overlay"></div>
+        <div class="overlay-home col third-overlay"></div>
         <div class="bg bg-3 col"></div>
         <div class="col-10 col-md-8 container-content">
             <p id="third-section-content" class="content-home">
@@ -42,7 +42,7 @@
     </section>
 
     <section class="row justify-content-center align-items-start">
-        <div class="overlay col fourth-overlay"></div>
+        <div class="overlay-home col fourth-overlay"></div>
         <div class="bg bg-4 col"></div>
         <div class="col-10 col-md-8 container-content">
             <p id="fourth-section-content" class="content-home">
