--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,11 +3,11 @@
 <footer class="site-footer">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 text-left">
+            <div class="mb-0 col-12 col-md-6 text-left">
                 <h6>About</h6>
                 <p class="text-justify">This website has been created for educational purposes. The author is responsible for any involuntary infringement of copyrights.</p>
             </div>
-            <div class="col-12 col-md-6 text-left text-md-right">
+            <div class="col-12 col-md-6 text-left text-md-right mb-0">
                 <h6>Contact</h6>
                 <ul class="footer-links">
                     <li><i class="fas fa-home mr-3"></i>Waddenweg 149,</li>
