Replaced dollar signs by euro

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -56,7 +56,7 @@
                                     {% endfor %}
                                 </ul>
                             </td>
-                            <td><strong>${{ order.grand_total }}</strong></td>
+                            <td><strong>€{{ order.grand_total }}</strong></td>
                         </tr>
                         {% endfor %}
                     </tbody>
