--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
-    <div class="row my-5">
+    <div class="row mt-5 mb-2 mb-md-5">
         <div class="col">
             <h2 class="logo-font mb-4">Checkout</h2>
         </div>
@@ -96,7 +96,7 @@
                     <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
 
-                <div class="submit-button text-right mt-5 mb-2">
+                <div class="submit-button text-center text-md-right mt-5 mb-2 pr-md-3">
                     <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
