--- a/events/templates/includes/event_grid_sm.html
+++ b/events/templates/includes/event_grid_sm.html
@@ -6,7 +6,7 @@
         <div class="col-3 text-info text-left pl-1 text-grid-events"><small>Date</small></div>
         <div class="col-9 text-left text-grid-events"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></div>
         <div class="col-3 text-info text-left pl-1 text-grid-events"><small>Venue</small></div>
-        <div class="col-9 text-left text-grid-events">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
+        <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
         <div class="col-3 text-info text-left pl-1 text-grid-events"><small>Programme</small></div>
         <div class="col-9 text-left text-grid-events">{{ event.programme }}</div>
         <div class="col-12 events-divider"></div>
@@ -29,7 +29,7 @@
         <div class="col-3 text-dark text-left pl-1 text-grid-events"><small>Date</small></div>
         <div class="col-9 text-left text-grid-events"><small>{{ event.date|date:"j M Y" }}, {{ event.time|date:"H:i" }}hs</small></div>
         <div class="col-3 text-dark text-left pl-1 text-grid-events"><small>Venue</small></div>
-        <div class="col-9 text-left text-grid-events">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
+        <div class="col-9 {% if event.event_url %}link-venue{% endif %} text-left text-grid-events">{% if event.event_url %}<a href="{{ event.event_url }}" target="_blank">{{ event.venue }}</a>{% else %}{{ event.venue }}{% endif %}</div>
         <div class="col-3 text-dark text-left pl-1 text-grid-events"><small>Programme</small></div>
         <div class="col-9 text-left text-grid-events">{{ event.programme }}</div>
         <div class="col-12 divider"></div>
