--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar fixed-top navbar-icon-top navbar-expand-lg navbar-expand-xl navbar-dark bg-dark">
 
-    <a href="{% url 'home' %}">
+    <a class="pr-3" href="{% url 'home' %}">
         <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 560.130321 506.623658" preserveAspectRatio="xMidYMid meet">
             <g transform="translate(-4.869679,509.981954) scale(0.100000,-0.100000)" fill="#cc1414" stroke="none">
                 <path d="M5395 5072 c-225 -124 -706 -549 -1180 -1043 -640 -666 -957 -917
@@ -39,13 +39,6 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item {{ home }} px-2 text-left">
-                <a class="nav-link navbar-items " href="{% url 'home' %}">
-                    <i class="fa fa-home"></i>
-                    Home
-                    <span class="sr-only">(current)</span>
-                </a>
-            </li>
             <li class="nav-item {{ media }} px-2 text-left">
                 <a class="nav-link navbar-items " href="{% url 'album' %}">
                     <i class="fa fa-photo-video"></i>
@@ -69,9 +62,13 @@
             <li class="nav-item dropdown px-2 text-left">
                 <a class="nav-link navbar-items" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-user"></i>
+                    {% if request.user.is_authenticated %}
+                    {{ request.user.username }}
+                    {% else %}
                     Profile
+                    {% endif %}
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     {% if request.user.is_authenticated %}
                     {% if request.user.is_superuser %}
                     <a class="dropdown-item" href="{% url 'add_media' %}">Media Management</a>
