Styled events grid headers

--- a/events/templates/includes/event_grid_lg.html
+++ b/events/templates/includes/event_grid_lg.html
@@ -1,11 +1,11 @@
 <div class="container d-none d-lg-block">
     <div class="row mt-5">
-        <div class="col-12 py-3"><strong>Upcoming Events</strong></div>
+        <div class="col-12 py-3 font-weight-bold lead">Upcoming Events</div>
         <div class="container mb-3">
             <div class="row">
-                <div class="col-3 header-upcoming text-dark text-left py-3">Date</div>
-                <div class="col-3 header-upcoming text-dark text-left py-3">Venue</div>
-                <div class="col-6 header-upcoming text-dark text-left py-3">Programme</div>
+                <div class="col-3 font-weight-bold header-upcoming text-dark text-left py-3">Date</div>
+                <div class="col-3 font-weight-bold header-upcoming text-dark text-left py-3">Venue</div>
+                <div class="col-6 font-weight-bold header-upcoming text-dark text-left py-3">Programme</div>
             </div>
         </div>
         {% for event in calendar %}
@@ -30,12 +30,12 @@
     </div>
 
     <div class="row">
-        <div class="col-12 py-3"><strong>Past Events</strong></div>
+        <div class="col-12 py-3 font-weight-bold lead">Past Events</div>
         <div class="container mb-3">
             <div class="row">
-                <div class="col-3 header-past text-light text-left py-3">Date</div>
-                <div class="col-3 header-past text-light text-left py-3">Venue</div>
-                <div class="col-6 header-past text-light text-left py-3">Programme</div>
+                <div class="col-3 font-weight-bold header-past text-light text-left py-3">Date</div>
+                <div class="col-3 font-weight-bold header-past text-light text-left py-3">Venue</div>
+                <div class="col-6 font-weight-bold header-past text-light text-left py-3">Programme</div>
             </div>
         </div>
         {% for event in calendar %}
