--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -18,8 +18,10 @@
     <div class="row mt-5">
         <div class="col">
             <h2 class="logo-font mb-4">Thank You</h2>
-            <p class="text-black mb-0">Your order information is below.</p>
-            <p class="text-black">A confirmation email {% if from_profile %}was {% else %} will be{% endif %} sent to <strong>{{ order.email }}</strong>.</p>
+            <p class="text-black {% if from_profile %}mb-3{% else %} mb-0{% endif %}">Your order information is below.</p>
+            {% if not from_profile %}
+            <p class="text-black">A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+            {% endif %}
         </div>
     </div>
     <div class="row justify-content-center">
@@ -55,7 +57,7 @@
                 {% endfor %}
                 <div class="row">
                     <div class="col text-left">
-                        <small class="font-weight-bold">Delivery to:</small>
+                        <small class="font-weight-bold">Delivery:</small>
                     </div>
                 </div>
                 <div class="row">
