--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,7 +5,8 @@
 <div class="container-fluid">
     <section class="row justify-content-start align-items-start">
         <div class="overlay-home col first-overlay"></div>
-        <div class="bg bg-1 col"></div>
+        {% comment %} <div class="bg bg-1 col"></div> {% endcomment %}
+        <div class="bg1 bg col" data-parallax="scroll" data-speed="0.2"></div>
         <div id="first-section-content" class="col-8 ml-lg-5 titles-home">
             <h1 class="mb-0">Guillermo</h1>
             <h1 class="mb-0">Brachetta</h1>
@@ -15,7 +16,8 @@
 
     <section class="row justify-content-center align-items-start">
         <div class="overlay-home col second-overlay"></div>
-        <div class="bg bg-2 col"></div>
+        {% comment %} <div class="bg bg-2 col"></div> {% endcomment %}
+        <div class="bg2 bg col" data-parallax="scroll" data-speed="0.5"></div>
         <div class="col-10 col-md-8 container-content">
             <p id="second-section-content" class="content-home">
                 I wish I could carve my own <span class="accent">chess</span> figures.
@@ -33,7 +35,8 @@
 
     <section class="row justify-content-center align-items-start">
         <div class="overlay-home col third-overlay"></div>
-        <div class="bg bg-3 col"></div>
+        {% comment %} <div class="bg bg-3 col"></div> {% endcomment %}
+        <div class="bg3 bg col" data-parallax="scroll" data-speed="0.5"></div>
         <div class="col-10 col-md-8 container-content">
             <p id="third-section-content" class="content-home">
                 I love being a musician.<br> I could have my dream day playing basso continuo and chamber music with friends and colleagues, to feel privileged whilst playing with them.<br> I have a strong connection with the music of Wilhelm Friedemann Bach and will not rest until I’ve done everything possible to make it better understood.<br> I cannot hold a conversation or read a book if there’s good music playing, but I can cry.<br> I find being onstage irresistible. Thanks to the music I travel and meet fascinating people.<br> I’m extremely fortunate.
@@ -43,7 +46,8 @@
 
     <section class="row justify-content-center align-items-start">
         <div class="overlay-home col fourth-overlay"></div>
-        <div class="bg bg-4 col"></div>
+        {% comment %} <div class="bg bg-4 col"></div> {% endcomment %}
+        <div class="bg4 bg col" data-parallax="scroll" data-speed="0.5"></div>
         <div class="col-10 col-md-8 container-content">
             <p id="fourth-section-content" class="content-home">
                 Please visit to discover my recordings, get to know more about my music, browse images and video and find out information about my upcoming events.<br>You can find my biography <span class="accent"><a href="#" data-toggle="modal" data-target="#biography">here</a></span>.
@@ -57,6 +61,7 @@
 {% endblock content %}
 {% block postjs %}
 {{ block.super }}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax.js/1.4.2/parallax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js" integrity="sha256-XDWrid8aGX+NZwSY7JzTu6oWArI71Sw+aUZ9Hd0P5mo=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
 <script src="{% static 'home/js/home.js' %}"></script>
