--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -118,6 +118,6 @@
 
 {% block postjs %}
 {{ block.super }}
-<script src="{% static 'shop/js/quantity_input_script.js' %}"></script>
-<script src="{% static 'bag/js/update_delete_scripts.js' %}"></script>
+<script src="{% static 'shop/js/quantity_input_script.min.js' %}"></script>
+<script src="{% static 'bag/js/update_delete_scripts.min.js' %}"></script>
 {% endblock postjs %}
