--- a/shop/templates/shop/cd_details.html
+++ b/shop/templates/shop/cd_details.html
@@ -103,5 +103,5 @@
 
 {% block postjs %}
 {{ block.super }}
-<script src="{% static 'shop/js/quantity_input_script.js' %}"></script>
+<script src="{% static 'shop/js/quantity_input_script.min.js' %}"></script>
 {% endblock postjs %}
