--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -69,5 +69,5 @@
 
 {% block postjs %}
 {{ block.super }}
-<script src="{% static 'profiles/js/countryfield.js' %}"></script>
+<script src="{% static 'profiles/js/countryfield.min.js' %}"></script>
 {% endblock postjs %}
