--- a/shop/templates/shop/add_cd.html
+++ b/shop/templates/shop/add_cd.html
@@ -41,7 +41,7 @@
 
 {% block postjs %}
 {{ block.super }}
-<script src="{% static 'shop/js/image_script.js' %}" type="text/javascript"></script>
+<script src="{% static 'shop/js/image_script.min.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block page_footer %}
