--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -17,7 +17,7 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col">
-            <h2 class="logo-font mb-4">Thank You</h2>
+            <h2 class="mb-4">Thank You</h2>
             <p class="text-black {% if from_profile %}mb-3{% else %} mb-0{% endif %}">Your order information is below.</p>
             {% if not from_profile %}
             <p class="text-black">A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
