--- a/events/templates/events/edit_event.html
+++ b/events/templates/events/edit_event.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="row justify-content-center my-5">
         <div class="col-12 col-lg-6">
-            <h2 class="logo-font mb-4">Event Management</h2>
+            <h2 class="mb-4">Event Management</h2>
             <h5 class="text-muted">Edit an Event</h5>
         </div>
     </div>
