--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row my-5">
         <div class="col">
-            <h2 class="logo-font mb-4">My Profile</h2>
+            <h2 class="mb-4">My Profile</h2>
         </div>
     </div>
     <div class="row mb-5">
