--- a/shop/templates/shop/add_cd.html
+++ b/shop/templates/shop/add_cd.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row justify-content-center mt-5">
         <div class="col-12 col-md-6">
-            <h2 class="logo-font mb-4">CD Management</h2>
+            <h2 class="mb-4">CD Management</h2>
             <h5 class="text-muted">Add a CD</h5>
         </div>
     </div>
