--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -24,7 +24,7 @@
         <div class="product-container col-10 offset-1">
             <div class="row">
                 {% for cd in cds %}
-                <div class="col-6 col-md-6 col-lg-4 col-xl-3">
+                <div class="col col-md-6 col-lg-4 col-xl-3">
                     <div class="card h-100 border-0">
                         <div class="card-body pb-3 pt-2">
                             <p class="mb-0  font-weight-bold">{{ cd.name }}</p>
@@ -63,13 +63,13 @@
                         </div>
                     </div>
                 </div>
-                {% comment %} {% if forloop.counter|divisibleby:1 %}
+                {% if forloop.counter|divisibleby:1 %}
                 <div class="col-12 d-sm-none mb-2">
                     <hr>
                 </div>
-                {% endif %} {% endcomment %}
+                {% endif %}
                 {% if forloop.counter|divisibleby:2 %}
-                <div class="col-12  d-sm-block d-md-block d-lg-none mb-2">
+                <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-2">
                     <hr>
                 </div>
                 {% endif %}
