--- a/album/templates/album/edit_media.html
+++ b/album/templates/album/edit_media.html
@@ -17,7 +17,7 @@
 
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'edit_media' media.id %}" class="form mb-2" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'edit_media' item.id %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                 {% if field.name != 'image' %}
