--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -32,10 +32,10 @@
                 <table class="table table-sm table-borderless">
                     <thead>
                         <tr>
-                            <th>Order Number</th>
-                            <th>Date</th>
-                            <th>Items</th>
-                            <th>Order Total</th>
+                            <th class="small font-weight-bold">Order Number</th>
+                            <th class="small font-weight-bold">Date</th>
+                            <th class="small font-weight-bold">Items</th>
+                            <th class="small font-weight-bold">Order Total</th>
                         </tr>
                     </thead>
                     <tbody>
