--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -59,7 +59,7 @@
             </li>
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item dropdown px-2 text-left">
+            <li class="nav-item dropdown px-2 text-left {{ profile }}">
                 <a class="nav-link navbar-items" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-user"></i>
                     {% if request.user.is_authenticated %}
@@ -84,7 +84,7 @@
                 </div>
             </li>
 
-            <li class="nav-item pl-2 pr-4 text-left">
+            <li class="nav-item pl-2 pr-4 text-left {{ bag }}">
                 <a class="nav-link navbar-items " href="{% url 'view_bag' %}">
                     <i class="fa fa-shopping-bag">
                         {% if grand_total %}
