Styled email link in footer

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -13,7 +13,9 @@
                     <li><i class="fas fa-home mr-3"></i>Waddenweg 149,</li>
                     <li>2134XL, Hoofddorp, NL</li>
                     <li><i class="fas fa-phone mr-3"></i>+31 6 5106 3002</li>
-                    <li><i class="fas fa-envelope mr-3"></i><a href="mailto:brachetta@me.com">brachetta@me.com</a></li>
+                    <li><i class="fas fa-envelope mr-3"></i>
+                        <a class="email" href="mailto:brachetta@me.com?subject=Mail from my site" target="_blank" rel="noopener noreferrer">brachetta@me.com</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -36,10 +38,3 @@
         </div>
     </div>
 </footer>
-
-
-
-
-
-
-
