Minified js home

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -64,5 +64,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax.js/1.4.2/parallax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js" integrity="sha256-XDWrid8aGX+NZwSY7JzTu6oWArI71Sw+aUZ9Hd0P5mo=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
-<script src="{% static 'home/js/home.js' %}"></script>
+<script src="{% static 'home/js/home.min.js' %}"></script>
 {% endblock postjs %}
