--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,105 +12,107 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container mb-2">
-    <div class="row my-5">
-        <div class="col">
-            <h2 class="mb-4">Your Shopping Bag</h2>
+<div class="wrapper">
+    <div class="container mb-2">
+        <div class="row my-5">
+            <div class="col">
+                <h2 class="mb-4">Your Shopping Bag</h2>
+            </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col">
-            {% if bag_items %}
-            <div class="d-block d-md-none">
-                <div class="row">
-                    <div class="col">
-                        {% include 'includes/bag-total.html' %}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        {% include 'includes/checkout-buttons.html' %}
-                        <p class="text-muted mb-5">Please find a summary of your order below</p>
-                    </div>
-                </div>
-                {% for item in bag_items %}
-                <div class="row">
-                    <div class="col-12 col-sm-6 mb-2">
-                        {% include 'includes/product-image.html' %}
-                    </div>
-                    <div class="col-12 col-sm-6 mb-2">
-                        {% include 'includes/product-info.html' %}
-                    </div>
-                    <div class="col-12 col-sm-6 order-sm-last">
-                        <p class="my-0">Price Each: €{{ item.cd.price }}</p>
-                        <p><strong>Subtotal: </strong>€{{ item.cd.price | calc_subtotal:item.quantity }}</p>
-                    </div>
-                    <div class="col-12 col-sm-6">
-                        {% include 'includes/quantity-form.html' %}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <hr>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-            <div class="table-responsive rounded d-none d-md-block">
-                <table class="table table-sm table-borderless">
-                    <thead class="text-black">
-                        <tr>
-                            <th scope="col">CD Information</th>
-                            <th scope="col"></th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Quantity</th>
-                            <th scope="col">Subtotal</th>
-                        </tr>
-                    </thead>
-
-                    {% for item in bag_items %}
-                    <tr>
-                        <td class="p-3 w-25">
-                            {% include 'includes/product-image.html' %}
-                        </td>
-                        <td class="py-3">
-                            {% include 'includes/product-info.html' %}
-                        </td>
-                        <td class="py-3">
-                            <p class="my-0">€{{ item.cd.price }}</p>
-                        </td>
-                        <td class="py-3 w-25">
-                            {% include 'includes/quantity-form.html' %}
-                        </td>
-                        <td class="py-3">
-                            <p class="my-0">€{{ item.cd.price | calc_subtotal:item.quantity }}</p>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                    <tr>
-                        <td colspan="5" class="pt-5 text-right">
+        <div class="row">
+            <div class="col">
+                {% if bag_items %}
+                <div class="d-block d-md-none">
+                    <div class="row">
+                        <div class="col">
                             {% include 'includes/bag-total.html' %}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td colspan="5" class="text-right">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
                             {% include 'includes/checkout-buttons.html' %}
-                        </td>
-                    </tr>
-                </table>
+                            <p class="text-muted mb-5">Please find a summary of your order below</p>
+                        </div>
+                    </div>
+                    {% for item in bag_items %}
+                    <div class="row">
+                        <div class="col-12 col-sm-6 mb-2">
+                            {% include 'includes/product-image.html' %}
+                        </div>
+                        <div class="col-12 col-sm-6 mb-2">
+                            {% include 'includes/product-info.html' %}
+                        </div>
+                        <div class="col-12 col-sm-6 order-sm-last">
+                            <p class="my-0">Price Each: €{{ item.cd.price }}</p>
+                            <p><strong>Subtotal: </strong>€{{ item.cd.price | calc_subtotal:item.quantity }}</p>
+                        </div>
+                        <div class="col-12 col-sm-6">
+                            {% include 'includes/quantity-form.html' %}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <hr>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <div class="table-responsive rounded d-none d-md-block">
+                    <table class="table table-sm table-borderless">
+                        <thead class="text-black">
+                            <tr>
+                                <th scope="col">CD Information</th>
+                                <th scope="col"></th>
+                                <th scope="col">Price</th>
+                                <th scope="col">Quantity</th>
+                                <th scope="col">Subtotal</th>
+                            </tr>
+                        </thead>
+
+                        {% for item in bag_items %}
+                        <tr>
+                            <td class="p-3 w-25">
+                                {% include 'includes/product-image.html' %}
+                            </td>
+                            <td class="py-3">
+                                {% include 'includes/product-info.html' %}
+                            </td>
+                            <td class="py-3">
+                                <p class="my-0">€{{ item.cd.price }}</p>
+                            </td>
+                            <td class="py-3 w-25">
+                                {% include 'includes/quantity-form.html' %}
+                            </td>
+                            <td class="py-3">
+                                <p class="my-0">€{{ item.cd.price | calc_subtotal:item.quantity }}</p>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        <tr>
+                            <td colspan="5" class="pt-5 text-right">
+                                {% include 'includes/bag-total.html' %}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="5" class="text-right">
+                                {% include 'includes/checkout-buttons.html' %}
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                {% else %}
+                <p class="lead mb-5">Your bag is empty.</p>
+                <a href="{% url 'shop' %}" class="btn btn-outline-dark rounded-0 btn-lg mb-5">
+                    <span class="icon">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span class="text-uppercase">
+                        Back to Shopping
+                    </span>
+                </a>
+                {% endif %}
             </div>
-            {% else %}
-            <p class="lead mb-5">Your bag is empty.</p>
-            <a href="{% url 'shop' %}" class="btn btn-outline-dark rounded-0 btn-lg mb-5">
-                <span class="icon">
-                    <i class="fas fa-chevron-left"></i>
-                </span>
-                <span class="text-uppercase">
-                    Back to Shopping
-                </span>
-            </a>
-            {% endif %}
         </div>
     </div>
 </div>
