--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -11,56 +11,58 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container">
-    <div class="row my-5">
-        <div class="col">
-            <h2 class="mb-4">My Profile</h2>
+<div class="wrapper">
+    <div class="container">
+        <div class="row my-5">
+            <div class="col">
+                <h2 class="mb-4">My Profile</h2>
+            </div>
         </div>
-    </div>
-    <div class="row mb-5">
-        <div class="col-12 col-lg-5">
-            <p class="text-muted">Default Delivery Information</p>
-            <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
-            </form>
-        </div>
-        <div class="col-12 col-lg-7">
-            <p class="text-muted">Order History</p>
-            <div class="order-history table-responsive">
-                <table class="table table-sm table-borderless">
-                    <thead>
-                        <tr>
-                            <th class="small font-weight-bold">Order Number</th>
-                            <th class="small font-weight-bold">Date</th>
-                            <th class="small font-weight-bold">Items</th>
-                            <th class="small font-weight-bold">Order Total</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for order in orders %}
-                        <tr>
-                            <td>
-                                <a class="small" href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
-                                    {{ order.order_number|truncatechars:8 }}
-                                </a>
-                            </td>
-                            <td><small>{{ order.date|date:"d M Y" }}</small></td>
-                            <td>
-                                <ul class="list-unstyled">
-                                    {% for item in order.lineitems.all %}
-                                    <li class="small">
-                                        {{ item.cd.name }} (x{{ item.quantity }})
-                                    </li>
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                            <td><strong>€{{ order.grand_total }}</strong></td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+        <div class="row mb-5">
+            <div class="col-12 col-lg-5">
+                <p class="text-muted">Default Delivery Information</p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-7">
+                <p class="text-muted">Order History</p>
+                <div class="order-history table-responsive">
+                    <table class="table table-sm table-borderless">
+                        <thead>
+                            <tr>
+                                <th class="small font-weight-bold">Order Number</th>
+                                <th class="small font-weight-bold">Date</th>
+                                <th class="small font-weight-bold">Items</th>
+                                <th class="small font-weight-bold">Order Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for order in orders %}
+                            <tr>
+                                <td>
+                                    <a class="small" href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
+                                        {{ order.order_number|truncatechars:8 }}
+                                    </a>
+                                </td>
+                                <td><small>{{ order.date|date:"d M Y" }}</small></td>
+                                <td>
+                                    <ul class="list-unstyled">
+                                        {% for item in order.lineitems.all %}
+                                        <li class="small">
+                                            {{ item.cd.name }} (x{{ item.quantity }})
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                                <td><strong>€{{ order.grand_total }}</strong></td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
