--- a/shop/templates/shop/cd_details.html
+++ b/shop/templates/shop/cd_details.html
@@ -17,7 +17,7 @@
         <h4 class="logo-font my-1">Free delivery if you buy {{ free_delivery_threshold }} CDs!</h4>
     </div>
 </div>
-<h1 class="mt-5 cd-title">{{ cd.name }}</h1>
+<h1 class="mt-5 pt-lg-5 cd-title">{{ cd.name }}</h1>
 <div class="container">
     <div class="row">
         <div class="col text-center">
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid extra-padding">
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
