--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -2,20 +2,23 @@
 {% load static %}
 
 {% block page_header %}
-<div class="header-container"></div>
-{% endblock page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock %}
 
 {% block content %}
 <div class="overlay"></div>
 
-<div class="container-fluid">
-    <div id="delivery-banner" class="row text-center">
-        <div class="col text-black bg-warning py-2">
-            <h4 class="logo-font my-1">Free delivery if you buy {{ free_delivery_threshold }} CDs!</h4>
-        </div>
+<div id="delivery-banner mb-5" class="row text-center">
+    <div class="col text-black bg-warning py-2">
+        <h4 class="logo-font my-1">Free delivery if you buy {{ free_delivery_threshold }} CDs!</h4>
     </div>
+</div>
+<div class="container-fluid">
     <div class="row">
-
         <div class="col">
             <h2 class="my-5">Shop Here</h2>
         </div>
