--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -6,8 +6,9 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
+<div class="wrapper">
 
-    <h2 class="logo-font my-5">{% trans "Password Reset" %}</h2>
+    <h2 class="my-5">{% trans "Password Reset" %}</h2>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
@@ -22,4 +23,5 @@
     </form>
 
     <p class="mb-5">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+</div>
 {% endblock %}
